--- a/src/css/11-containers.less
+++ b/src/css/11-containers.less
@@ -404,21 +404,54 @@ hr{
   }
 }
 
+.create-rule-gap(@prefix) {
+  @cn: "@{prefix}space";
+  .bbn-grid-@{prefix}gap {
+    grid-column-gap: calc(@@cn * 2);
+    grid-row-gap: @@cn;
+  }
+}
+
+
 .bbn-grid {
   display: grid;
   clear: both;
-  grid-column-gap: 0.5rem;
-  grid-row-gap: 0.25rem;
+  >.bbn-grid-full {
+    box-sizing: border-box;
+    grid-column-start: 1;
+    grid-column-end: -1;
+  }
+  >.bbn-grid-fill {
+    grid-column-start: 2;
+    grid-column-end: -1;
+  }
+  >.bbn-grid-fill-third {
+    grid-column-start: 3;
+    grid-column-end: -1;
+  }
+  >.bbn-grid-fill-fourth {
+    grid-column-start: 4;
+    grid-column-end: -1;
+  }
 }
+.create-rule-gap(no);
+.create-rule-gap(~"");
+.create-rule-gap(l);
+.create-rule-gap(xl);
+.create-rule-gap(xxl);
+.create-rule-gap(s);
+.create-rule-gap(xs);
+.create-rule-gap(xxs);
+
 
 @media (min-width: @mobile-limit) {
   .bbn-grid-fields {
-
     //padding: 1rem;
     .bbn-grid;
-    grid-column-gap: 2rem;
     grid-template-columns: minmax(auto, max-content) auto;
-
+    grid-row-gap: @space;
+    grid-column-gap: calc(@space*2);
+  
     >*:not(.bbn-grid-full) {
       height: max-content;
       &::first-line {
@@ -488,9 +521,21 @@ hr{
       }
     }
 
+    &.bbn-j,
+    &.bbn-justified {
+      grid-template-columns: 1fr 1fr;
+
+      >* {
+        text-align: justify;
+      }
+    }
+
     >.bbn-grid-full {
       box-sizing: border-box;
       grid-column-start: 1;
+      grid-column-end: -1;
+    }
+    >.bbn-grid-fill {
       grid-column-end: -1;
     }
   }
